--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "src/app.js",
   "dependencies": {
     "express": "^4.17.1",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "nodemon": "^2.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
   },
   "scripts": {
     "start": "nodemon --watch \"src/\" --exec \"node src/app.js\"",
+    "start:dev": "nodemon nodemon --watch \"src/\" --exec \"node src/app.js\"",
     "watch": "nodemon --watch \"src/\" --exec \"node src/app.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
